# MI

./: BaseMI.cpp  BaseMI.h  CMakeLists.txt  HomoDictPoly+Tone.txt  HomoDictPoly-Tone.txt  LM.cpp  LM.h  MI.h  MIDemo.cxx  MIDemo1.cpp  Makefile  PY2IF+Tone.txt  readme  setup.py  test.py
